fixed modal scroll box spacing

--- a/front/src/App.css
+++ b/front/src/App.css
@@ -71,9 +71,7 @@ body {
     position: absolute;
     height: 100%;
     width: 100%;
-    line-height: 300px;
     color: #03446A;
-    font-size: 60px;
     border-radius: 5px;
     backface-visibility: hidden;
   }
